add User backend

--- a/BackEnd/ASSALA_ISKANE_SpringBoot_BackEnd/src/main/resources/application.properties
+++ b/BackEnd/ASSALA_ISKANE_SpringBoot_BackEnd/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ASSALA_ISKANE_SpringBoot_BackEnd
+
+server.port=80
+server.servlet.context-path=/assalaiskane
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+spring.datasource.url=jdbc:mysql://localhost/assalaiskane
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
