--- a/FrontEnd/assala_iskane_front/package.json
+++ b/FrontEnd/assala_iskane_front/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.24",
+    "i18next": "^23.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
