--- a/FrontEnd/assala_iskane_front/package.json
+++ b/FrontEnd/assala_iskane_front/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.24",
     "i18next": "^23.14.0",
+    "lucide-react": "^0.437.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
