--- a/FrontEnd/assala_iskane_front/package.json
+++ b/FrontEnd/assala_iskane_front/package.json
@@ -13,11 +13,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
+    "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.24",
     "i18next": "^23.14.0",
     "lucide-react": "^0.437.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
     "react-router-dom": "^6.24.1",
