--- a/FrontEnd/assala_iskane_front/package.json
+++ b/FrontEnd/assala_iskane_front/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/material": "^5.16.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.16.12",
+    "@mui/material": "^5.16.12",
     "@mui/x-data-grid-pro": "^7.13.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,6 +24,7 @@
     "react-i18next": "^15.0.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
