--- a/BackEnd/ASSALA_ISKANE_SpringBoot_BackEnd/src/main/resources/application.properties
+++ b/BackEnd/ASSALA_ISKANE_SpringBoot_BackEnd/src/main/resources/application.properties
@@ -1,12 +1,4 @@
-spring.application.name=ASSALA_ISKANE_SpringBoot_BackEnd
-
-server.port=9092
-server.servlet.context-path=/assalaiskane
-
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
-spring.datasource.url=jdbc:mysql://localhost/assalaiskane
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
+# Use environment variables
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
