--- a/BackEnd/ASSALA_ISKANE_SpringBoot_BackEnd/src/main/resources/application.properties
+++ b/BackEnd/ASSALA_ISKANE_SpringBoot_BackEnd/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/assalaiskane
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.datasource.url=jdbc:mysql://localhost/assalaiskane
+spring.datasource.url=jdbc:mysql://localhost/assalaIskane
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=reda
