--- a/.github/workflows/full-stack-ci-cd.yml
+++ b/.github/workflows/full-stack-ci-cd.yml
@@ -2,9 +2,9 @@ name: Full Stack CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, reda ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, reda ]
 
 jobs:
   build-and-test:
@@ -21,7 +21,7 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies (React)
-        working-directory: ./frontend
+        working-directory: ../../Frontend/front_v2
         run: npm install
 
       - name: Build React app
@@ -36,25 +36,25 @@ jobs:
           java-version: '17'
 
       - name: Build with Maven
-        working-directory: ./backend
+        working-directory: ../../Backend/ASSALA_ISKANE_SpringBoot_BackEnd
         run: mvn clean install
 
   # Optional: Dockerize and deploy (CD)
-  dockerize:
-    needs: build-and-test
-    runs-on: ubuntu-latest
+  # dockerize:
+  #   needs: build-and-test
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Log in to DockerHub
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/your-app:latest
+  #     - name: Build and push Docker image
+  #       run: |
+  #         docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:latest .
+  #         docker push ${{ secrets.DOCKER_USERNAME }}/your-app:latest
