--- a/.github/workflows/full-stack-ci-cd.yml
+++ b/.github/workflows/full-stack-ci-cd.yml
@@ -13,15 +13,16 @@ jobs:
     services:
       mysql:
         image: mysql:5.7
-        environment:
+        env:
           MYSQL_ROOT_PASSWORD: reda
+          MYSQL_DATABASE: testdb
         ports:
           - 3306:3306
-        healthcheck:
-          test: ["CMD", "mysqladmin", "ping", "--silent"]
-          interval: 10s
-          timeout: 5s
-          retries: 5
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - name: Checkout code
