--- a/.github/workflows/full-stack-ci-cd.yml
+++ b/.github/workflows/full-stack-ci-cd.yml
@@ -217,21 +217,21 @@ jobs:
         run: mvn clean install
 
   # Optional: Dockerize and deploy (CD)
-  # dockerize:
-  #   needs: build-and-test
-  #   runs-on: ubuntu-latest
+  dockerize:
+    needs: build-and-test
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Log in to DockerHub
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #     - name: Build and push Docker image
-  #       run: |
-  #         docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:latest .
-  #         docker push ${{ secrets.DOCKER_USERNAME }}/your-app:latest
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/your-app:latest
