--- a/.github/workflows/full-stack-ci-cd.yml
+++ b/.github/workflows/full-stack-ci-cd.yml
@@ -231,7 +231,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-app:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/your-app:latest
+      - name: Build Docker images with docker-compose
+        run: docker-compose build
+
+      - name: Push Docker images to DockerHub
+        run: docker-compose push
+
