--- a/.github/workflows/full-stack-ci-cd.yml
+++ b/.github/workflows/full-stack-ci-cd.yml
@@ -232,8 +232,8 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker images with docker-compose
-        run: docker-compose build
+        run: docker compose build
 
       - name: Push Docker images to DockerHub
-        run: docker-compose push
+        run: docker compose push
 
